--- a/portfolio/src/app/components/header/header.component.html
+++ b/portfolio/src/app/components/header/header.component.html
@@ -1,13 +1,13 @@
 <section class="header">
     <div class="title">
-        <p>Belén Castelli Gubiotti</p>
+        <p id="titleName" routerLink="/home">Belén Castelli Gubiotti</p>
     </div>
     <nav class="nav">
         <ul>
-            <li>Sobre mí</li>
-            <li>Tecnologías</li>
-            <li>Proyectos</li>
-            <li>Contacto</li>
+            <li routerLink="/about">Sobre mí</li>
+            <li routerLink="/techs">Tecnologías</li>
+            <li routerLink="/projects">Proyectos</li>
+            <li routerLink="/contact">Contacto</li>
         </ul>
     </nav>
 
