--- a/portfolio/src/app/pages/home/home.component.css
+++ b/portfolio/src/app/pages/home/home.component.css
@@ -16,7 +16,8 @@
 
 .cardPerfil {
     width: 1100px;
-    height: 450px;
+    padding: 30px;
+    /* height: 450px; */
     display: flex;
     border: solid #579DF2;
     border-radius: 15px;
@@ -156,347 +157,14 @@
     box-shadow: 0px 0px 10px 1px red;
 }
 /* About */
-.about{
-    height: 650px;
-    background-color: #e0cec2;
-
-
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 100px;
-
+.aboutHome, #techsHome, #contactHome {
+    margin-top: -140px;
 }
 
-.titleAbout{
-    background-image: linear-gradient(to right, #664900, #A67700, #A67700, #A67700, #664900);
-    padding: 10px;
-    border-radius: 15px;
-    width: 200px;
-}
-
-.titleAbout h4, .titleTech h4, .titleProyects h4{
-    font-size: 20pt;
-    color: #e0cec2;
-    text-align: center;
-}
-
-.photoAb, .description{
-    border: solid black 2px;
-    border-radius: 15px;
-}
-.photoAb img{
-    filter: drop-shadow(20px 0px 10px rgba(0, 0, 0, 0.3));
-}
-
-.description{
-    width: 30%;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.description p {
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
-
-}
-
-/* Technologies */
-.technologies{
-    /* height: 775px; */
-    padding: 50px 0px;
-    background-color: #070420;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.techContainer{
-    width: 70%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
-}
-.titleTech, .titleProyects{
-    font-family: 'Courier New', Courier, monospace;
-    color: #e0cec2;
-    padding: 10px;
-    border-radius: 15px;
-}
-
-.titleTech{
-    background-image: linear-gradient(to right, #16203F, #0B59B1, #0A2F5B);
-}
-.start{
-    align-self: flex-start;
-}
-
-.end{
-    align-self: flex-end;
-}
-
-.techs{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-
-    gap: 40px;
-}
-
-.frontend, .backend, .tools{
-    width: 400px;
-    height: 500px;
-    border: solid #579DF2 2px;
-    padding: 10px;
-
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items:center;
-}
-
-.frontend{
-    box-shadow: -20px 20px 20px 1px #579DF2;
-    /* gap: 7px; */
-}
-
-.backend{
-    box-shadow: 0px 20px 20px 1px #579DF2;
-    gap: 10px;
-    padding-top: 25px;
-}
-
-.tools{
-    box-shadow: 20px 20px 20px 1px #579DF2;
-    /* gap: 17px; */
-}
-
-.imgIcon{
-    height: 100%;
-    width: 100%;
-  object-fit: fill;
-}
-
-
-/* proyects */
-.projects{
-    padding: 50px 0px;
-    background-color: #e0cec2;
-    display: flex;
-    justify-content: center;
-}
-
-.projectsContainer{
-    width: 70%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
-}
-
-.titleProyects{
-    background-image: linear-gradient(to right, #664900, #A67700, #A67700, #A67700, #664900);
-}
-
-.bodyProjects{
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-}
-
-/* principal proyect */
-
-.magyDeck{
-    display: flex;
-    height: 650px;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
-.aboutMagydeck{
-    border: solid #C38A31 2px;
-    border-radius: 15px;
-    /* box-shadow: -10px 10px 40px #C38A31; */
-    width: 38%;
-    height: 100%;
-    padding: 15px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 30px;
-}
-
-.titleMagydeck{
-    background-color: #C38A31;
-    align-self: center;
-    padding: 10px;
-    width: 200px;
-    border-radius: 15px;
-    border: solid black 1px;
-    /* box-shadow: 0px 0px 20px 4px #C38A31; */
-}
-
-.titleMagydeck h4{
-    font-family:'Courier New', Courier, monospace;
-    font-size: 20pt;
-    text-align: center;
-    text-shadow: 2px 2px 4px rgb(73, 62, 9)
-}
-
-/* .descriptionMagydeck{
-
-} */
-
-.descriptionMagydeck p {
-    font-family: monospace;
-    font-size: 13pt;
-}
-
-.socialMagydeck{
-    align-self: center;
-    width: 90%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: #C38A31;
-    border-radius: 15px;
-    /* height: 50px; */
-}
-.iconMagy{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.github:hover{
-    border-radius: 502px;
-}
-.linkMagy:hover{
-    box-shadow: 0px 0px 10px 2px white;
-    transform: scale(1.1);
-}
-
-
-.videoMagy{
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.videoMagy iframe {
-    object-fit: contain;
-}
-
-.otherProjs{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 60px;
-}
-
-.photoMagydeck{
-    border: solid #C38A31 2px;
-    border-radius: 15px;
-    width: 58%;
-    display: flex;
-    /* height: 100%; */
-      /* box-shadow: 10px 10px 40px #C38A31; */
-
-}
-#imgMagy{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
 
 /* contact */
 
-.contact{
-    background-color: #070420;;
-    padding: 50px 0px;
-    display: flex;
-    justify-content: center;
-    font-family: monospace;
-}
-.contactContainer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 70%;
-    height: 100%;
-    gap: 50px;
-}
 
-
-.contacSection{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-}
-
-.opinion{
-    color: white;
-    text-align: center;
-    font-size: 18pt;
-}
-.infoContainer{
-    display: flex;
-    gap: 50px;
-    flex-wrap: wrap;
-}
-
-.infoContact{
-    border: solid #579DF2 2px;
-    border-radius: 15px;
-    color: white;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;
-
-}
-/* .imgContact
-{
-    border: solid white 2px;
-} */
-
-.textContact{
-    align-self: center;
-    font-size: 16pt;
-    text-decoration: underline;
-}
-
-.socialNet{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-
-}
-
-.howContact{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-
-}
-
-.howContact p {
-    font-size: 13pt;
-    padding-top: 10px;
-}
 
 @media screen {
     
