--- a/portfolio/src/app/pages/home/home.component.html
+++ b/portfolio/src/app/pages/home/home.component.html
@@ -57,204 +57,19 @@
  
 
     </section>
-
-    <section class="about">
-        <div class="titleAbout">
-            <h4>Sobre mí</h4>
-        </div>
-        <div class="photoAb">
-            <img src="../../../assets/images/WEEB_BEIVA__7381-removebg-preview(1) 1.png" alt="Foto about BelenCastelli" id="photoAbout">
-        </div>
-        <div class="description">
-            <p>Soy una apasionada por la tecnología y el aprendizaje continuo. Me destaco por  mis habilidades analíticas y comunicativas, disfruto creando soluciones  innovadoras y colaborando en equipos multidisciplinarios.</p>
-            <p>Fuera del trabajo, disfruto del senderismo, la lectura, los videojuegos y pasar tiempo con mi familia y amigos</p>
-        </div>
-        
+    <section class="aboutHome">
+        <app-about></app-about>
+    </section>
+    <section id="techsHome">
+        <app-techs></app-techs>
     </section>
     
-    <section class="technologies">
-        <div class="techContainer">
-            <div class="titleTech start">
-                <h4>< Tecnologías ></h4>
-            </div>
-            <div class="techs">
-                <div class="frontend">
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/icons8-html-144 1.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/icons8-css-144 1.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/icons8-js-144 1.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/icons8-mecanografiado-144 1.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/icons8-angularjs-144 1.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/icons8-oreja-144 1.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/image 3.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/image 4.png" alt="" class="imgIcon">
-                    </div>
-
-                </div>
-                <div class="backend">
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/icons8-nodo-js-144 1.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/icons8-expresar-js-144 1.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/icons8-mysql-an-open-source-relational-database-management-system-96 1.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/icons8-mongodb-a-cross-platform-document-oriented-database-program-96 1.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">             
-                        <img src="../../../assets/images/techs/icons8-ngp-144 1.png" alt="" class="imgIcon">
-                    </div>
-                </div>
-                <div class="tools">
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/icons8-git-144 1.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/icons8-github-128 1.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/icons8-figma-96 1.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/icons8-estudio-visual-144 1.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/icons8-amazon-web-services-144(1) 1.png" alt="" class="imgIcon">
-                    </div>
-                    <div class="iconTech">
-                        <img src="../../../assets/images/techs/image 5.png" alt="" class="imgIcon">
-                    </div>
-                </div>
-            </div>
-            <div class="titleTech end">
-                <h4>< / Tecnologías ></h4>
-            </div>
-        </div> 
+    <section id="projsHome">
+        <app-proyectos></app-proyectos>
     </section>
     
-    <section class="projects">
-        <div class="projectsContainer">
-            <div class="titleProyects start">
-                <h4>< Proyectos ></h4>
-            </div>
-            <div class="bodyProjects">
-                <div class="magyDeck">
-                    <div class="aboutMagydeck">
-                        <div class="titleMagydeck">
-                            <h4>MagyDeck</h4>
-                        </div>
-                        <div class="descriptionMagydeck">
-                            <p>Aplicación Web para enriquecer la experiencia de juego de cartas Magic: The Gathering.</p>
-                            <br>
-                            <p>Construida con Angular, esta aplicación aprovecha una API REST externa  (Scryfall) para ofrecer datos actualizados sobre las cartas. Además,  utiliza una base de datos relacional (MySQL) para gestionar la información  pertienente</p>
-                        </div>
-                        <div class="socialMagydeck">
-                            <div class="iconMagy">
-                                <a href="https://magy-deck.vercel.app/" target="_blank"><img src="../../../assets/images/projects/Web.png" alt="" class="linkMagy web"></a>
-                            </div>
-                            <!-- <div class="iconMagy">
-                                <img src="../../../assets/images/projects/Trial.png" alt="" class="linkMagy">
-                            </div> -->
-                            <div class="iconMagy">
-                               <a href="https://github.com/naopeke/MagyDeck" target="_blank"> <img src="../../../assets/images/projects/GitHub.png" alt="" class="linkMagy github"></a>
-                            </div>
-                            <div class="iconMagy">
-                                <a href="https://github.com/naopeke/MagyDeck_API" target="_blank"><img src="../../../assets/images/projects/GitHub.png" alt="" class="linkMagy github"></a>
-                            </div>
-                        </div>
-                        <div class="videoMagy">
-                            <iframe width="320" src="https://www.youtube.com/embed/kQP7XOjJazs?si=jEkZ1qtkKKJ0unS9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        </div>
-                        
-                
-                    </div>
-                    <div class="photoMagydeck">
-                        <div class="imgMagyCont">
-                            <img src="../../../assets/images/projects/foto magydeck.png" alt="" id="imgMagy">
-                        </div>
-                            
-                    </div>
-                </div>
-                <div class="otherProjs">
-                    <div *ngFor="let project of projects">
-                        <app-projects [project] = 'project' ></app-projects>
-                    </div>
-                    
-                </div>
-            </div>
-            <div class="titleProyects end">
-                <h4>< / Proyectos ></h4>
-            </div>
-
-        </div>
-    </section>
-    
-    <section class="contact">
-        <div class="contactContainer">
-            <div class="titleTech start">
-                <h4>< Contacto ></h4>
-            </div>
-            <div class="contacSection">
-                <div class="opinion">
-                    <p>Si tienes alguna consulta, propuesta de colaboración o simplemente quieres decir “hola”, estaré encantada de recibir tu mensaje.</p>
-                </div>
-                <div class="infoContainer">
-                    <div class="imgContact">
-                        <div>
-                            <img src="../../../assets/images/contact/BEIVA7550 1.png" alt="">
-                        </div>
-                    </div>
-                    <div class="infoContact">
-                        <div class="textContact">
-                            <p>Puedes contactarme mediante:</p>
-                        </div>
-                        <div class="socialNet">
-                            <div class="howContact">
-
-                                    <a href="mailto:mariabelencastelli29@gmail.com?subject=Asunto del correo&body=Cuerpo del mensaje">
-                                    <img src="../../../assets/images/contact/Gmail Logo.png" width="40px" alt=""></a>
-
-                 
-                                    <p>mariabelencastelli29@gmail.com</p>
-                        
-                            </div>
-                            <div  class="howContact">
-                                    <img src="../../../assets/images/contact/Phone.png "width="40px" alt="">
-                                    <p>+34 660 79 11 65</p>
-                            </div>
-                            <div  class="howContact">
-                                    <img src="../../../assets/images/contact/LinkedIn.png" width="40px" alt="">
-                                    <p>www.linkedin.com/in/belén-castelli-gubiotti-34b111263/</p>
-                            </div>
-                        </div>
-                        
-
-   
-                    </div>
-                </div>
-            </div>
-            <div class="titleTech end">
-                <h4>< / Contacto ></h4>
-            </div>
-
-        </div>
+    <section id="contactHome">
+        <app-contact></app-contact>
     </section>
     
 </main>
