--- a/portfolio/src/app/components/header/header.component.html
+++ b/portfolio/src/app/components/header/header.component.html
@@ -1,13 +1,13 @@
 <section class="header">
-    <div class="title">
+    <div class="titleHeader">
         <p id="titleName" routerLink="/home">Belén Castelli Gubiotti</p>
     </div>
     <nav class="nav">
         <ul>
-            <li routerLink="/about">Sobre mí</li>
-            <li routerLink="/techs">Tecnologías</li>
-            <li routerLink="/projects">Proyectos</li>
-            <li routerLink="/contact">Contacto</li>
+            <li><a routerLink="/about"></a>Sobre mí</li>
+            <li><a routerLink="/techs"></a>Tecnologías</li>
+            <li><a routerLink="/projects"></a>Proyectos</li>
+            <li><a routerLink="/contact"></a>Contacto</li>
         </ul>
     </nav>
 
