--- a/portfolio/src/app/components/header/header.component.css
+++ b/portfolio/src/app/components/header/header.component.css
@@ -1,7 +1,7 @@
 .header {
     width: 100%;
     height: 140px;
-    padding: 20px;
+    /* padding: 20px; */
 
     display: flex;
     gap: 50px;
@@ -17,22 +17,24 @@
     
 
 }
-.title, .nav {
+.titleHeader, .nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 16pt;
+
 }
 
-.title{
+.titleHeader{
     width: 40%;
-    justify-content: center;
+
 }
 
-.title p {text-align: center;}
+#titleName {text-align: center;
+    font-size: 24pt;}
 
 .nav {
     width: 60%;
+    font-size: 14pt;
 }
 
 .nav ul {
@@ -53,4 +55,19 @@
     text-decoration: underline;
     cursor: pointer;
 }
+
+@media screen and (max-width: 830px)
+{
+    #titleName{
+        font-size: 16pt;
+    }
+ 
+    .nav {
+        font-size: 12pt;
+    }
+
+}
+    
+
+
 
