--- a/portfolio/src/app/pages/home/home.component.css
+++ b/portfolio/src/app/pages/home/home.component.css
@@ -89,7 +89,7 @@
 }
 
 .cardPhoto{
-    width: 40%;
+    width: 45%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -99,7 +99,7 @@
 }
 
 .myPhoto{
-    width: 85%;
+    width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -127,20 +127,15 @@
 }
 
 .modalVideo{
-    width: 1100px;
-    height: 450px;
     padding: 10px;
-    position: absolute;
-    right: 400px;
     z-index: 99;
-
     border: solid #579DF2;
     border-radius: 15px;
     box-shadow: 0px 0px 30px 5px #579DF2;
     background-color: #070420;
-
     display: flex;
     flex-direction: column;
+    align-items: center;
 
 }
 
