--- a/portfolio/src/app/pages/home/home.component.html
+++ b/portfolio/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <main class="main">
     <section class="presentation">
-        <div class="cardPerfil">
+        <div *ngIf="modalVideo == false else video" class="cardPerfil">
             <div class="cardInfo">
                 <div class="title">
                     <h1 id="titleName">Belén Castelli Gubiotti</h1>
@@ -40,19 +40,22 @@
                 </div>
 
             </div>
-            <div *ngIf="modalVideo">
-                <div class="modalVideo">
-                    <div class="close">
-                        <img src="../../../assets/images/Cancel.png" alt="" id="closeCV"
-                        (click)="closeVideo()">
-                    </div>
-                    <div class="video">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/2gG7gCRinRk?si=pxREnDXsppmLiuVg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    </div>
-                    
-                </div>
-            </div>
         </div>
+        <ng-template #video>
+            <div class="modalVideo">
+                <div class="close">
+                    <img src="../../../assets/images/Cancel.png" alt="" id="closeCV"
+                    (click)="closeVideo()">
+                </div>
+                <div class="video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/2gG7gCRinRk?si=pxREnDXsppmLiuVg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                
+            </div>
+        </ng-template>
+        
+   
+
 
  
 
