--- a/portfolio/src/app/components/header/header.component.css
+++ b/portfolio/src/app/components/header/header.component.css
@@ -56,6 +56,11 @@
     cursor: pointer;
 }
 
+.nav ul li a {
+    text-decoration: none;
+    color: inherit;
+}
+
 @media screen and (max-width: 830px)
 {
     #titleName{
