--- a/portfolio/src/app/components/header/header.component.html
+++ b/portfolio/src/app/components/header/header.component.html
@@ -4,10 +4,10 @@
     </div>
     <nav class="nav">
         <ul>
-            <li><a routerLink="/about"></a>Sobre mí</li>
-            <li><a routerLink="/techs"></a>Tecnologías</li>
-            <li><a routerLink="/projects"></a>Proyectos</li>
-            <li><a routerLink="/contact"></a>Contacto</li>
+            <li><a routerLink="/about">Sobre mí</a></li>
+            <li><a routerLink="/techs">Tecnologías</a></li>
+            <li><a routerLink="/projects">Proyectos</a></li>
+            <li><a routerLink="/contact">Contacto</a></li>
         </ul>
     </nav>
 
