--- a/portfolio/src/app/pages/contact/contact.component.html
+++ b/portfolio/src/app/pages/contact/contact.component.html
@@ -10,7 +10,7 @@
             <div class="infoContainer">
                 <div class="imgContact">
                     <div>
-                        <img src="../../../assets/images/contact/BEIVA7550 1.png" alt="">
+                        <img src="../../../assets/images/contact/BEIVA7550 1.png" alt="" id="photoContact">
                     </div>
                 </div>
                 <div class="infoContact">
