--- a/portfolio/src/app/pages/home/home.component.css
+++ b/portfolio/src/app/pages/home/home.component.css
@@ -127,7 +127,7 @@
 }
 
 .modalVideo{
-    padding: 10px;
+    padding: 20px;
     z-index: 99;
     border: solid #579DF2;
     border-radius: 15px;
@@ -136,12 +136,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 5px;
 
 }
 
 
 .video{
     align-self: center;
+
+}
+
+.video iframe{
+    border-radius: 15px;
 }
 
 .close{
